# logitycoon_automation

./: .gitignore  README.md  ajaxes.js  config.py  entrypoints.py  interfaces.py  main.py  notes.md  requirements.txt  setup.cfg  t.py  testing-api-calls.http  utils.py
company/: buildings.py  employees.py  garage.py  managers.py  trips.py  warehouse.py
env/: .env_public
interfaces/: base.py  local.py  web.py
scripts/: fuel_thief.py
tests/: test_interfaces.py
