[metadata]
name = logitycoon_automation

[options]
py_modules =
    main
    config

[options.entry_points]
console_scripts =
    start-and-load = entrypoints:accept_and_load
    next-step = entrypoints:do_next_step
    assign-assets = entrypoints:assign_assets
    refuel-all = entrypoints:refuel_all