[metadata]
name = logitycoon_automation

[options]
py_modules =
    main
    config

[options.entry_points]
console_scripts =
    sal = entrypoints:accept_and_load
    ns = entrypoints:do_next_step
    assa = entrypoints:assign_assets
    rall = entrypoints:refuel_all
    sf = entrypoints:steal_fuel